<resources>
    <string name="app_name">todollist</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="have_an_account_login_here">Have an account? Login here</string>
    <string name="dont_t_have_an_account_register_here">Dont\'t have an account? Register here</string>
    <string name="login">Login</string>
</resources>